--- a/style.css
+++ b/style.css
@@ -1,57 +1,136 @@
 * {
-  font-family: 'Gloria Hallelujah', Arial, Helvetica, sans-serif;
+  font-family: 'Gloria Hallelujah', Georgia, 'Times New Roman', Times, serif;
+  font-size: 22px;
 }
 
 body {
-margin: 0;
-display: flex;
-height: 100vh;
-width: 100vw;
-justify-content: center;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
-.color-picker {
-border: none;
-width: 90px;
-height: 40px;
+button {
+  border: none;
+  background: none;
+  display: flex;
+  justify-content: left;
 }
 
-.background,
-.brush {
-display: flex;
-align-items: center;
-justify-content: space-between;
-}
-
-.rainbow-text {
-color: randomColorGenerator();
-}
-
-.toolskit {
-margin: 15px;
-}
-
-.rainbow-button {
-border: none;
-background: none;
-font-size: 16px;
-padding: 0;
+.title {
+  display: flex;
+  justify-content: center;
+  font-size: 72px;
+  margin: 55px 0px 35px 0px;
 }
 
 .main {
-border: 2px solid red;
-display: flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 35px;
 }
 
+.toolkit {
+  display: flex;
+  height: 50vh;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.input-row {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+#square-input {
+  width: 245px;
+  font-size: 16px;
+  padding: 7px;
+  border-radius: 15px;
+  border: 2px dashed rebeccapurple;
+}
+
+.square-input-button {
+  border: 2px dashed rosybrown;
+  border-radius: 15px;
+  margin-left: 10px;
+}
+
+.updated {
+  font-size: 16px;
+  margin-left: 10px;
+}
 .container {
-display: grid;
-grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  width: 480px;
+  height: 480px;
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.fill-row,
+.brush-row,
+.toggle-row {
+  display: flex;
+  align-items: center;
+}
+
+
+#canvas-color-picker,
+#brush-color-picker {
+  border: none;
+  width: 15vw;
+  height: 5vh;
+  margin-left: 15px;
+}
+
+.rainbow-button {
+  animation: rainbow-button 2.5s linear;
+	animation-iteration-count: infinite;
+  border: 2px dashed;
+  border-radius: 15px;
+}
+
+@keyframes rainbow-button{
+  100%,0%{
+    color: rgb(255,0,0);
+  }
+  8%{
+    color: rgb(255,127,0);
+  }
+  16%{
+    color: rgb(255,255,0);
+  }
+  25%{
+    color: rgb(127,255,0);
+  }
+  33%{
+    color: rgb(0,255,0);
+  }
+  41%{
+    color: rgb(0,255,127);
+  }
+  50%{
+    color: rgb(0,255,255);
+  }
+  58%{
+    color: rgb(0,127,255);
+  }
+  66%{
+    color: rgb(0,0,255);
+  }
+  75%{
+    color: rgb(127,0,255);
+  }
+  83%{
+    color: rgb(255,0,255);
+  }
+  91%{
+    color: rgb(255,0,127);
+  }
 }
 
 
 
-/* .sketch:hover {
-background: black;
-} */ /*understand why this does not work*/
+
+
